--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ h3 {
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
-    background-color: lightgray;
 }
 
 .container > * {
@@ -94,14 +93,31 @@ h3 {
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(47, 241, 63, 0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(37, 223, 207, 0.5);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
-    background-color: white;
+    background-color: rgb(192, 192, 192);
 }
 
 .btn[disabled]:hover {
     cursor: not-allowed;
     box-shadow: none;
     transform: none;
+}
+
+/*End Screen*/
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 rgba(37, 223, 207, 0.5);
 }
